METAMODEL-1153: Added endpoint for DELETE data source
